kerning on user forms was annoying me

--- a/app/assets/templates/users-form.html.erb
+++ b/app/assets/templates/users-form.html.erb
@@ -8,7 +8,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none;">Username: </span>
             </td>
             <td width="300px;">
-              <input type="text" class="form-control" placeholder="Username" data-ng-model="newUser.username" style="" required>
+              <input type="text" class="form-control" placeholder="Username" data-ng-model="newUser.username" style="width: 300px" required>
             </td>
           </tr>
         </table>
@@ -20,7 +20,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Password:  </span>
             </td>
             <td width="300px;">
-              <input type="password" class="form-control" placeholder="Password" data-ng-model="newUser.password" style="" required>
+              <input type="password" class="form-control" placeholder="Password" data-ng-model="newUser.password" style="width: 300px" required>
             </td>
           </tr>
         </table>
@@ -32,7 +32,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Real Name:  </span>
             </td>
             <td width="300px;">
-              <input type="text" class="form-control" placeholder="Real Name" data-ng-model="newUser.realName" style="" required>
+              <input type="text" class="form-control" placeholder="Real Name" data-ng-model="newUser.realName" style="width: 300px" required>
             </td>
           </tr>
         </table>
@@ -44,7 +44,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Available Hours:  </span>
             </td>
             <td width="300px;">
-              <input type="text" class="form-control" placeholder="6pm-6am" data-ng-model="newUser.availableHours" style="" required>
+              <input type="text" class="form-control" placeholder="6pm-6am" data-ng-model="newUser.availableHours" style="width: 300px" required>
             </td>
           </tr>
         </table>
@@ -56,7 +56,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Current City:  </span>
             </td>
             <td width="300px;">
-              <input type="text" class="form-control" placeholder="Berkeley, California" data-ng-model="newUser.currentCity" style="" required>
+              <input type="text" class="form-control" placeholder="Berkeley, California" data-ng-model="newUser.currentCity" style="width: 300px" required>
             </td>
           </tr>
         </table>
@@ -69,7 +69,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Your Bio:  </span>
             </td>
             <td width="300px;">
-              <input type="text" class="form-control" placeholder="I like camels." data-ng-model="newUser.bio" style="" required>
+              <input type="text" class="form-control" placeholder="I like camels." data-ng-model="newUser.bio" style="width: 300px" required>
             </td>
           </tr>
         </table>
@@ -82,7 +82,7 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Avatar URL:  </span>
             </td>
             <td width="300px;">
-              <input type="text" class="form-control" placeholder="trollface.jpg" data-ng-model="newUser.profileUrl" style="" required>
+              <input type="text" class="form-control" placeholder="trollface.jpg" data-ng-model="newUser.profileUrl" style="width: 300px" required>
             </td>
           </tr>
         </table>
