removing non-functional search bar

--- a/app/assets/templates/navbar.html.erb
+++ b/app/assets/templates/navbar.html.erb
@@ -20,12 +20,14 @@
 			        <li><a href="#map" style="color: white;">Map</a></li>
 			        <li><a href="#shop" style="color: white;">Shop</a></li>
 		      	</ul>
+		       <!-- Collect the nav links, forms, and other content for toggling
 		     	<form class="navbar-form navbar-left" role="search">
 		        	<div class="form-group">
 		         		<input type="text" data-ng-model="searchUser" class="form-control" placeholder="Search users">
 		        	</div>
 		        	<button type="submit" class="btn btn-default">Search</button>
 		     	</form>
+		     	-->
 		     	<ul class="nav navbar-nav navbar-right" style="margin-right:4%">
 		     		<li class="dropdown" data-ng-show="false">
 			         	<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: white;">Dropdown <span class="caret"></span></a>
