--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -54,8 +54,8 @@ a {
 
 body{
 	/*background:url(http://i.imgur.com/lGjlXUF.gif)no-repeat;*/
-	background:url(http://i.imgur.com/AU8lTBE.gif) fixed right top no-repeat;
-	background-size: cover;
+	background:url(http://i.imgur.com/AU8lTBE.gif) fixed right top;
+	background-size: stretch;
 }
 
 
