--- a/app/assets/templates/about.html.erb
+++ b/app/assets/templates/about.html.erb
@@ -1,7 +1,10 @@
 <div class="container-fluid" style="margin-top:-.2%">
 	<div class="test">
 		<h1>About Us</h1>
-		[Some blurb here]
+		<p>We are a team of software engineers dedicated to the betterment of society via socially conscious technology and software.</p>
+
+		<p>Generosity Engine, brainchild of developer Chris Conway, is an app we designed to help individuals be generous and kind to others. Our users are tasked with giving gifts to people they've never met before, just for the sake of altruism and generosity.</p>
+
 
 		<h1>Credits</h1>
 		<li><span class="tag">Backend team:</span> Greg Monson, Chris Conway, Nick Helvig</li>
