In the process of adding recipient details to challenges.

--- a/app/assets/templates/about.html.erb
+++ b/app/assets/templates/about.html.erb
@@ -13,7 +13,7 @@
 		<li><span class="tag">Handyman:</span> Paul Kang</li>
 		<li><span class="tag">Primary advisor:</span> Carina Boo</li>
 		<li><span class="tag">Miscellaneous advisors:</span> Arjun Baokar, Saurabh Mitra, Brian Mok</li>
-		<li><span class="tag">Alpha testers: Kotaro Kusuda, Brandon Chan</span></li>
+		<li><span class="tag">Alpha testers:</span> Kotaro Kusuda, Brandon Chan</li>
 		<li><span class="tag">Beta testers:</span></li>
 
 		<br><br>
