--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -6,10 +6,13 @@
 		
 		<div class= "challenge_button pulse">A Challenge Approaches!</div>
 
-		<img class="circlemage" src="http://images.clipartpanda.com/question-question_mark_blue.png" >
+		<img class="circlemage" src="{{receivingUser.imageUrl}}" >
 		<br>
 		
 		<div class = "profile_info" style = "padding-bottom: 30px;">
+		<br>
+		Username: {{receivingUser.recipient}}
+		<br>
 		<br>
 		Best timeframe: {{receivingUser.availableHours}}
 		<br> 
