--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -11,7 +11,7 @@
 		
 		<div class = "profile_info" style = "padding-bottom: 30px;">
 		<br>
-		Username: {{receivingUser.recipient}}
+		Username: {{receivingUser.reciever}}
 		<br>
 		<br>
 		Best timeframe: {{receivingUser.availableHours}}
