--- a/app/assets/templates/gift-list-element.html.erb
+++ b/app/assets/templates/gift-list-element.html.erb
@@ -1,35 +1,47 @@
+<div data-ng-controller="GiftsController as giftElement" data-ng-init="giftElement.name = aGift.name">
+	<div class = "panel">
+		<div class="gift-front card">
+		<div class="input-group" style="margin-bottom:1%">
+		<img style="height:200px; width:200px" src="{{aGift.url}}"/>
+		</div>
+		<div class="input-group" style="margin-bottom:1%">
+			<h1>{{aGift.name}}</h1>
+		</div>
+		</div>
+		<h1>
+		<div class="gift-back card">
+		<div class="input-group" style="margin-bottom:1%">
+			Giver: {{aGift.giver}}
+		</div>
+		<br>
+		<div class="input-group" style="margin-bottom:1%">
+			Recipient: {{aGift.recipient}}
+		</div>
+		<br>
+		<div class="input-group" style="margin-bottom:1%">
+			Rating: {{aGift.rating}}/5
+		</div>
+		<br>
+		<div class="input-group" style="margin-bottom:1%">
+			Description: {{aGift.description}}
+		</div>
+		<br>
+		<form name="reviewForm" data-ng-show="aGift.receiving" data-ng-submit="giftElement.writeReview()" class="input-group" style="margin-bottom:1%" novalidate>
+		    <td width="200px;">
+		      <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Review:  </span>
+		    </td>
+		    <td width="200px;">
+		      <input type="text" class="form-control" placeholder="Review" data-ng-model="giftElement.review" style="" required>
+		    </td>
+		    <button class="btn btn-default" style="marin-top:30px;">Submit Review</button>
+	    </form>
+		<div class="input-group" style="margin-bottom:1%">
+		<a href="#gift/{{aGift.id}}" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white; margin-bottom: 30px;">Show Details</button></a>
 
-<div class = "panel">
-	<div class="gift-front card">
-	<div class="input-group" style="margin-bottom:1%">
-	<img style="height:200px; width:200px" src="{{aGift.url}}"/>
-	</div>
-	<div class="input-group" style="margin-bottom:1%">
-		<h1>{{aGift.name}}</h1>
-	</div>
-	</div>
-	<h1>
-	<div class="gift-back card">
-	<div class="input-group" style="margin-bottom:1%">
-		Giver: {{aGift.giver}}
-	</div>
-	<br>
-	<div class="input-group" style="margin-bottom:1%">
-		Recipient: {{aGift.recipient}}
-	</div>
-	<br>
-	<div class="input-group" style="margin-bottom:1%">
-		Rating: {{aGift.rating}}/5
-	</div>
-	<br>
-	<div class="input-group" style="margin-bottom:1%">
-		Description: {{aGift.description}}
-	</div>
-	<div class="input-group" style="margin-bottom:1%">
-	<a href="#gift/{{aGift.id}}" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white; margin-bottom: 30px;">Show Details</button></a>
-	</div>
-	</div>
+		</div>
+		</div>
 
+		</div>
+		</h1>
 	</div>
-	</h1>
 </div>
