Added gift id to writeReview()'s API call.

--- a/app/assets/templates/gift-list-element.html.erb
+++ b/app/assets/templates/gift-list-element.html.erb
@@ -1,4 +1,4 @@
-<div data-ng-controller="GiftsController as giftElement" data-ng-init="giftElement.name = aGift.name">
+<div data-ng-controller="GiftsController as giftElement" data-ng-init="giftElement.name = aGift.name; giftElement.id = aGift.id">
 	<div class = "panel">
 		<div class="gift-front card">
 		<div class="input-group" style="margin-bottom:1%">
