Gift show page now correctly displays description and review.

--- a/app/assets/templates/gift.html.erb
+++ b/app/assets/templates/gift.html.erb
@@ -19,7 +19,11 @@
 		</div>
 		<br>
 		<div class="input-group" style="margin-bottom:1%">
-		Description: {{profiledGift.description}}
+		Description: {{profiledGift.bio}}
+		</div>
+		<br>
+		<div class="input-group" style="margin-bottom:1%">
+		Review: {{profiledGift.review}}
 		</div>
 		<br>
 	</div>
