--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -55,7 +55,7 @@ a {
 body{
 	/*background:url(http://i.imgur.com/lGjlXUF.gif)no-repeat;*/
 	background:url(http://i.imgur.com/AU8lTBE.gif) fixed right top;
-	background-size: stretch;
+	background-size: cover;
 }
 
 
