--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -163,7 +163,6 @@ h2{
 		-webkit-animation: fade 6s;
 	  -webkit-animation-fill-mode: both;
 		opacity:0.9;
-		border-radius: 20px;
 		-moz-background-clip: padding;
 		-webkit-background-clip: padding;
 		background-clip: padding-box;
@@ -171,7 +170,7 @@ h2{
 		margin: 0 auto;
 		text-align: center;
 		font-family: raleway, sans-serif;
-		margin-top: 30px;
+		margin-top: .02%;
 		padding-top:100px;
 		padding-bottom: 120px;
 		background-color: rgba(240, 248, 255, .93);
@@ -186,7 +185,6 @@ h2{
 	-webkit-animation: fade 6s;
   -webkit-animation-fill-mode: both;
 	opacity:0.9;
-	border-radius: 20px;
 	-moz-background-clip: padding;
 	-webkit-background-clip: padding;
 	background-clip: padding-box;
@@ -196,7 +194,7 @@ h2{
 	min-width: 600px;
 	text-align: center;
 	font-family: raleway, sans-serif;
-	margin-top: 30px;
+	margin-top: .02%;
 	padding-top:100px;
 	padding-bottom: 120px;
 	background-color: rgba(240, 248, 255, .93);
