got rid of ugly buttons and bigger text areas

--- a/app/assets/templates/challenge.html.erb
+++ b/app/assets/templates/challenge.html.erb
@@ -27,7 +27,7 @@
 		<br>
 		<br>
 		<!-- <a href="#edit-user" data-ng-show="{{canEdit}}"><button style="background-color:teal; color:white">Edit Details</button></a> -->
-	    <a data-ng-hide="receivingUser.code == -1" href="#gifts-form"><button style="background-color:teal; color:white;">Choose Gift!</button></a>
+	    <a class="btn btn-default"data-ng-hide="receivingUser.code == -1" href="#gifts-form">Choose Gift!</a>
 	  </div>
 		</div>
 		</div>
