--- a/app/assets/templates/users-form.html.erb
+++ b/app/assets/templates/users-form.html.erb
@@ -69,7 +69,8 @@
               <span class="input-group-addon" style="background-color: transparent; padding-right:5em; border-style:none">Your Bio:  </span>
             </td>
             <td width="300px;">
-              <input type="text" class="form-control" placeholder="I like camels." data-ng-model="newUser.bio" style="width: 300px" required>
+              <textarea class="form-control" placeholder="I like camels." data-ng-model="newUser.bio" style="width: 300px; height: 5em;" required>
+              </textarea>
             </td>
           </tr>
         </table>
