--- a/app/assets/templates/about.html.erb
+++ b/app/assets/templates/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid" style="margin-top:-.2%">
-	<div class="test">
+	<div class="usercard">
 		<h1>About Us</h1>
 		<p>We are a team of software engineers dedicated to the betterment of society via socially conscious technology and software.</p>
 
