--- a/app/assets/templates/login-form.html.erb
+++ b/app/assets/templates/login-form.html.erb
@@ -1,4 +1,4 @@
-<form name="usersForm" style="margin-left: 3%;padding-top: 30px;" data-ng-submit="loginUser.login(loginUser.username, loginUser.password)" novalidate>
+<form name="usersForm" style="padding-top: 30px;" data-ng-submit="loginUser.login(loginUser.username, loginUser.password)" novalidate>
 <div class="usercard">
   
       <div class="input-group" style="padding-top: 40px; margin-bottom:1%">
