--- a/app/assets/templates/users-form.html.erb
+++ b/app/assets/templates/users-form.html.erb
@@ -1,4 +1,4 @@
-<form name="usersForm" style="margin-left: 3%;" data-ng-submit="newUser.addUser()" novalidate>
+<form name="usersForm" style="" data-ng-submit="newUser.addUser()" novalidate>
 <div class="usercard">
   
       <div class="input-group" style="padding-top: 30px; text-align: center">
